Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -34,23 +34,47 @@
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/76ba4d02-ce6c-41aa-b8f4-0a01f0e9d11e.jpeg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo.jpeg" alt="">
+  </div>
+    <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="">
+  </div>
+    <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="">
   </div>
   <div class="card">
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpeg" alt="">
+  </div>
+  <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpeg" alt="">
+  </div>
+  <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpeg" alt="">
+  </div>
+  <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpeg" alt="">
   </div>
 </div>
 
 <h2 class="section-title">Promotions</h2>
 <div class="cards-container">
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpg" alt="">
+  </div>
+   <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="">
+  </div>
+   <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/menGift.jpg" alt="">
+  </div>
+   <div class="card">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="" id="discounted1">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpg" alt="" id="discounted1">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/summerShirt.jpg" alt="">
   </div>
 </div>
 
@@ -136,24 +160,28 @@
     </div>
     <section class="NosFleurs">
       <div class="fleur1>
-        <img src="" alt="fleur ...">
-        hhhhhhhhh
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="fleur ...">
       </div>
       <div class="fleur2>
-        <img src="" alt="fleur ...">
-        hhhhhhhhh
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpeg" alt="fleur ...">
       </div>
       <div class="fleur3>
-        <img src="" alt="fleur ...">
-        hhhhhhhhh
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpeg" alt="fleur ...">
       </div>
       <div class="fleur4>
-        <img src="" alt="fleur ...">
-        hhhhhhhhh
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo.jpeg" alt="fleur ...">
       </div>
       <div class="fleur5>
-        <img src="" alt="fleur ...">
-        hhhhhhhhh
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpeg" alt="fleur ...">
+      </div>
+       <div class="fleur6>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpeg" alt="fleur ...">
+      </div>
+       <div class="fleur7>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="fleur ...">
+      </div>
+       <div class="fleur8>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="fleur ...">
       </div>
     </section>
     <div class="welcome-box" id="welcome2">
@@ -168,19 +196,28 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme2.jpg" alt="try">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try" id="discounted2">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme.jpg" alt="try" id="discounted2">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/pentalonFemme.jpg" alt="try">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try" id="discount3">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/summerShirt.jpg" alt="try" id="discount3">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="try">
+      </div>
+       <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme2.jpg" alt="try">
+      </div>
+       <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/chemiseArdoiseFemme.jpg" alt="try">
+      </div>
+       <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/boutCarre.jpg" alt="try">
       </div>
     </section>
 
