Update image sources from .jpeg to .jpg

--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpeg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpeg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpeg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpeg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpg" alt="">
   </div>
 </div>
 
 <h2 class="section-title">Promotions</h2>
 <div class="cards-container">
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="">
   </div>
    <div class="card">
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="">
@@ -71,7 +71,7 @@
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpg" alt="" id="discounted1">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="" id="discounted1">
   </div>
   <div class="card">
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/summerShirt.jpg" alt="">
@@ -163,10 +163,10 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="fleur ...">
       </div>
       <div class="fleur2>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpeg" alt="fleur ...">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpg" alt="fleur ...">
       </div>
       <div class="fleur3>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpeg" alt="fleur ...">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpg" alt="fleur ...">
       </div>
       <div class="fleur4>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo.jpeg" alt="fleur ...">
@@ -175,7 +175,7 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpeg" alt="fleur ...">
       </div>
        <div class="fleur6>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpeg" alt="fleur ...">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpg" alt="fleur ...">
       </div>
        <div class="fleur7>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="fleur ...">
