--- a/index.html
+++ b/index.html
@@ -159,28 +159,28 @@
       </div>
     </div>
     <section class="NosFleurs">
-      <div class="fleur1>
+      <div class="fleur1">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="fleur ...">
       </div>
-      <div class="fleur2>
+      <div class="fleur2">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs1.jpg" alt="fleur ...">
       </div>
-      <div class="fleur3>
+      <div class="fleur3">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs2.jpg" alt="fleur ...">
       </div>
-      <div class="fleur4>
+      <div class="fleur4">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo.jpeg" alt="fleur ...">
       </div>
-      <div class="fleur5>
+      <div class="fleur5">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpeg" alt="fleur ...">
       </div>
-       <div class="fleur6>
+       <div class="fleur6">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpg" alt="fleur ...">
       </div>
-       <div class="fleur7>
+       <div class="fleur7">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="fleur ...">
       </div>
-       <div class="fleur8>
+       <div class="fleur8">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="fleur ...">
       </div>
     </section>
@@ -196,7 +196,7 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme2.jpg" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="try">
       </div>
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme.jpg" alt="try" id="discounted2">
