--- a/index.html
+++ b/index.html
@@ -79,85 +79,82 @@
 </div>
 
 
-    <div class="container">
-      <div class="container1">
-        <div class="container_logo">
-          <img class="logo" src="images/logo.JPG" alt="logo" />
-        </div>
+    <div class="info-section">
+  <div class="brand-block">
+    <div class="brand-logo">
+      <img src="images/logo.JPG" alt="logo" />
+    </div>
 
-        <div class="contact">
-          <h3 style="text-align: center; color: rgb(128, 61, 72)">
-            Contactez Nous <i class="fa fa-phone"></i>
-          </h3>
-          <p style="text-align: center; color: brown">
-            Numero de telephone :
-            <strong><a href="https://wa.me/243976203805">+243 976 203 805</a></strong>
-            <br />
-            Numero de telephone :
-            <strong> <a href="https://wa.me/243853958848">+243 853 958 848</a></strong>
-            <br />
-            localisation <i class="fa fa-map-marker"></i> : Kinshasa, ngaliema ,
-            kin marche GB <br />
-          </p>
-        </div>
+    <div class="contact-block">
+      <h3>Contactez Nous <i class="fa fa-phone"></i></h3>
+
+      <ul>
+        <li>
+          Téléphone:
+          <a href="https://wa.me/243976203805">+243 976 203 805</a>
+        </li>
+        <li>
+          Téléphone:
+          <a href="https://wa.me/243853958848">+243 853 958 848</a>
+        </li>
+        <li>
+          Localisation:
+          <span>Kinshasa, Ngaliema, kin marché GB</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="tarif-block">
+    <div class="image-row">
+      <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/download.jpg" />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6b6rTizPFGdSnm8JHEzr-60gGFX1dMmmQqA&s" />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDjtBfNWnss2yb22uoYbtj_yebfrqLr33Faw&s" />
+    </div>
+
+    <div class="pricing">
+      <h1>TARIF BOUQUET</h1>
+      <div class="bouquets">
+        <span>1 Rose: 3$</span>
+        <h2>BOUQUET</h2>
+        <span>10 Roses: 40$</span>
+        <span>20 Roses: 80$</span>
+        <span>30 Roses: 120$</span>
+        <span>40 Roses: 160$</span>
+        <span>60 Roses: 200$</span>
+        <span>100 Roses: 300$</span>
+        <span>Fleure mixte: 80$</span>
+        <span>Bouquet chocolat + 20 roses: 110$</span>
       </div>
-      <div class="container2">
-        <div class="images">
-          <img
-            src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/download.jpg"
-            alt=""
-          />
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6b6rTizPFGdSnm8JHEzr-60gGFX1dMmmQqA&s"
-            alt=""
-          />
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDjtBfNWnss2yb22uoYbtj_yebfrqLr33Faw&s"
-            alt=""
-          />
-        </div>
-        <div class="tarif">
-          <h1>TARIF BOUQUET</h1>
 
-          <div class="bouquets">
-            <strong style="color: rgb(128, 61, 72)">1 Rose: 3$</strong> <br />
-            <h2 style="color: brown; text-decoration: underline">
-              <strong>BOUQUET</strong>
-            </h2>
-            10 Roses &nbsp;&nbsp;: 40$ <br />
-            20 Roses &nbsp;&nbsp;: 80$ <br />
-            30 Roses &nbsp;&nbsp;: 120$ <br />
-            40 Roses : 160$ <br />
-            60 Roses : 200$ <br />
-            100 Roses : 300$ <br />
-            fleure mixte : 80$ <br />
-            Bouqet de chocolat + 20 roses: 110$
-          </div>
-          <div class="rose_mixte" style="display: block">
-            <h2>COFFRET & BOITTE</h2>
-            Coffret en rose : <b>60$</b> <br />
-            boite de 10 roses + chocolat : <b>60$ </b> <br />
-            boite de 20 roses + chocolat : <b>100$</b> <br />
-            boite de 30 roses + chocolat : <b>150$</b> <br />
-          </div>
-        </div>
-        <div class="images2">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
-            alt=""
-          />
-
-          <img
-            src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
-            alt=""
-          />
-        </div>
+      <div class="rose_mixte">
+        <h2>COFFRET & BOITTE</h2>
+        <span>Coffret en rose: 60$</span>
+        <span>Boite 10 roses + chocolat: 60$</span>
+        <span>Boite 20 roses + chocolat: 100$</span>
+        <span>Boite 30 roses + chocolat: 150$</span>
       </div>
     </div>
+  </div>
+</div>
+
+      <div class="images2">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
+            alt=""
+          />
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
+            alt=""
+          />
+
+        <img
+          src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
+            alt=""
+          />
+      </div>
+    </div>
+</div>
     <section class="NosFleurs">
       <div class="fleur1">
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="fleur ...">
@@ -241,21 +238,6 @@
         <button onclick="location.href='#discounted4'"> SEE PRODUCT</button>
       </div>
     </section>
-    
-
-    <script>
-      window.addEventListener("load", () => {
-        const box = document.querySelectorAll(".welcome-box");
-        box.classList.add("visible");
-      });
-      window.addEventListener("scroll", () => {
-        const box = document.querySelectorAll(".welcome-box")[1];
-        if (window.scrollY >= 500) {
-          box.classList.add("visible");
-        } else {
-          box.classList.remove("visible");
-        }
-      });
-    </script>
+    <script defer src="script.js"></script>
   </body>
 </html>
