--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="fleur ...">
       </div>
     </section>
-    <div class="welcome-box" id="welcome2">
+    <div class="welcome-box">
       <h3>VENTE DES HABITS</h3>
       <p>
        Découvrez nos vêtements tendance en ligne ! 
