updating index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
   <div class="card">
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/fleurs3.jpg" alt="">
   </div>
+  <div> <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
+            alt=""
+          />
+  </div>
+  <div>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
+            alt=""
+          />
+  </div>
+  <div>
+     <img
+          src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
+            alt=""
+          />
+  </div>
 </div>
 
 <h2 class="section-title">Promotions</h2>
@@ -137,19 +154,7 @@
     </div>
   </div>
   <div class="images2">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
-            alt=""
-          />
-
-        <img
-          src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
-            alt=""
-          />
+       
   </div>
 </div>
     <section class="NosFleurs">
