--- a/index.html
+++ b/index.html
@@ -240,6 +240,43 @@
         <button onclick="location.href='#discounted4'"> SEE PRODUCT</button>
       </div>
     </section>
+     <div class="welcome-box" id="welcome3">
+      <h3>Tenues personnalisees</h3>
+      <p>
+       Découvrez nos vêtements tendance en ligne ! 
+        Commandez dès maintenant et recevez votre style unique directement chez vous en seulement <i>2 semaines</i> Livraison rapide et facile, pour un look qui fait sensation !
+      </p>
+    </div>
+    <section class="closthes">
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme.jpg" alt="try" id="discounted2">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/pentalonFemme.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/summerShirt.jpg" alt="try" id="discount3">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="try">
+      </div>
+       <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme2.jpg" alt="try">
+      </div>
+       <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/chemiseArdoiseFemme.jpg" alt="try">
+      </div>
+       <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/boutCarre.jpg" alt="try">
+      </div>
+    </section>
+
     <script defer src="script.js"></script>
   </body>
 </html>
