--- a/index.html
+++ b/index.html
@@ -243,8 +243,10 @@
      <div class="welcome-box" id="welcome3">
       <h3>Tenues personnalisees</h3>
       <p>
-       Découvrez nos vêtements tendance en ligne ! 
-        Commandez dès maintenant et recevez votre style unique directement chez vous en seulement <i>2 semaines</i> Livraison rapide et facile, pour un look qui fait sensation !
+      Exprime ton style, ta signature, ta vibe.Choisis ton modèle, ta couleur, ton motif et laisse-nous créer la pièce que personne d’autre n’aura.
+      Fabrication soignée, finitions propres, impression de qualité et livraison rapide.
+      Commande maintenant et porte ce qui te représente vraiment.
+      Disponible pour hommes, femmes et enfants.rapide et facile, pour un look qui fait sensation !
       </p>
     </div>
     <section class="closthes">
