--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div>
         <button onclick="location.href='#welcome2'">Habits</button>
-        <button>Tenues personnalisées</button>
+        <button onclick="location.href='#tenuesPresonalisee'">Tenues personnalisées</button>
         <button>Cadeaux</button>
       </div>
     </header>
@@ -240,7 +240,7 @@
         <button onclick="location.href='#discounted4'"> SEE PRODUCT</button>
       </div>
     </section>
-     <div class="welcome-box" id="welcome3">
+     <div class="welcome-box" id="tenuesPresonalisee">
       <h3>Tenues personnalisees</h3>
       <p>
       Exprime ton style, ta signature, ta vibe.Choisis ton modèle, ta couleur, ton motif et laisse-nous créer la pièce que personne d’autre n’aura.
