--- a/index.html
+++ b/index.html
@@ -191,33 +191,35 @@
       </p>
     </div>
     <section class="closthes">
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="try">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme.jpg" alt="try" id="discounted2">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/pentalonFemme.jpg" alt="try">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/summerShirt.jpg" alt="try" id="discount3">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="try">
-      </div>
-       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme2.jpg" alt="try">
-      </div>
-       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/chemiseArdoiseFemme.jpg" alt="try">
-      </div>
-       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/boutCarre.jpg" alt="try">
-      </div>
+      <marquee behavior="alternate" direction="right">
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="try">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/hautFemme.jpg" alt="try" id="discounted2">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/pentalonFemme.jpg" alt="try">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/summerShirt.jpg" alt="try" id="discount3">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="try">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme2.jpg" alt="try">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/chemiseArdoiseFemme.jpg" alt="try">
+        </div>
+        <div>
+          <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/boutCarre.jpg" alt="try">
+        </div>
+      </marquee>
     </section>
 
     <section class="discounts">
