marquee : from alternate to scroll

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       </p>
     </div>
     <section class="closthes">
-      <marquee behavior="alternate" direction="right">
+      <marquee behavior="scroll" direction="right">
         <div>
           <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
         </div>
