--- a/index.html
+++ b/index.html
@@ -254,9 +254,7 @@
       </p>
     </div>
     <section class="closthes">
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
-      </div>
+     <img alt="" class="iFOUS5" draggable="true" fetchpriority="auto" loading="auto" src="https://i.pinimg.com/736x/5f/08/74/5f08740b15e9749fbac2817d94efcd63.jpg">
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/HautFemme2.jpg" alt="try">
       </div>
