--- a/index.html
+++ b/index.html
@@ -259,16 +259,16 @@
         <img alt="This may contain: the personalized robes and slippers are laid out on a wooden table with shoes" class="iFOUS5" draggable="true" fetchpriority="high" loading="auto" elementtiming="closeup-image-main-MainPinImage" src="https://i.pinimg.com/736x/82/24/ac/8224ac1130da5f5e7811d2adc1fdc537.jpg" srcset="https://i.pinimg.com/736x/82/24/ac/8224ac1130da5f5e7811d2adc1fdc537.jpg 736w, https://i.pinimg.com/1200x/82/24/ac/8224ac1130da5f5e7811d2adc1fdc537.jpg 960w">
       </div>
       <div>
-       <img class="jI_JN7" data-test-id="duplo-hls-video" playsinline="" poster="https://i.pinimg.com/videos/thumbnails/originals/f3/ca/74/f3ca74f1bdbf516b094c2aadf668a297.0000000.jpg" preload="auto" src="blob:https://www.pinterest.com/7a46c2b9-9a7f-470e-9d98-e844bdbd7b59" style="object-fit: contain;"><track kind="captions"></img>
+        <img alt="Story pin image" class="iFOUS5" draggable="true" fetchpriority="high" loading="auto" elementtiming="StoryPinImageBlock-MainPinImage" src="https://i.pinimg.com/736x/de/2b/76/de2b76f79d0d900c2603b40a8307159f.jpg">
       </div>
       <div>
         <img alt="" class="iFOUS5" draggable="true" fetchpriority="high" loading="auto" elementtiming="closeup-image-main-MainPinImage" src="https://i.pinimg.com/736x/2f/d4/0d/2fd40d13b707a2cef319b8e07517f560.jpg" srcset="https://i.pinimg.com/736x/2f/d4/0d/2fd40d13b707a2cef319b8e07517f560.jpg 736w, https://i.pinimg.com/1200x/2f/d4/0d/2fd40d13b707a2cef319b8e07517f560.jpg 1024w">
       </div>
       <div>
-       <img class="jI_JN7" data-test-id="duplo-hls-video" playsinline="" poster="https://i.pinimg.com/736x/b4/42/d3/b442d3b7760a902f61c4ecee3a0014e8.jpg" preload="auto" src="blob:https://www.pinterest.com/b16c190f-680e-4d99-a9c0-2ba1f3a0190d" style="object-fit: contain;"><track kind="captions"></img>
+        <img alt="This may contain: three sweatshirts and one hoodie are shown in black, white, and grey" class="iFOUS5" draggable="true" fetchpriority="high" loading="auto" elementtiming="closeup-image-main-MainPinImage" src="https://i.pinimg.com/736x/3b/1a/52/3b1a52cd3006e7786b27ee73ff8664a4.jpg" srcset="https://i.pinimg.com/736x/3b/1a/52/3b1a52cd3006e7786b27ee73ff8664a4.jpg 736w, https://i.pinimg.com/1200x/3b/1a/52/3b1a52cd3006e7786b27ee73ff8664a4.jpg 1000w">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme.jpg" alt="try">
+        <img alt="This may contain: a bride slipper with the word bride written on it" class="iFOUS5" draggable="true" fetchpriority="high" loading="auto" elementtiming="closeup-image-main-MainPinImage" srcset="https://i.pinimg.com/736x/3e/fd/df/3efddf113ab15929b3294d57a783c16b.jpg 736w, https://i.pinimg.com/1200x/3e/fd/df/3efddf113ab15929b3294d57a783c16b.jpg 736w" src="https://i.pinimg.com/736x/3e/fd/df/3efddf113ab15929b3294d57a783c16b.jpg">
       </div>
        <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/tricotHomme2.jpg" alt="try">
